service-mesh/virtual-service-orders.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-orders
  namespace: service-mesh-demo
spec:
  hosts:
  - "*"
  gateways:
  - service-mesh-demo-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: orders
        port:
          number: 8080
